Principal excercise updated

--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -47,59 +47,37 @@
 
           <div class="col-lg-8">
             <!--<h2 class="portfolio-title">This is an example of portfolio detail</h2>-->
-            <br>
-            <br>
-            <br>
-            <br>
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/resized-1.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/resized-2.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/resized-3.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-
+              <iframe class="col-lg-12"
+                frameborder="0"
+                scrolling="yes"
+                width="640"
+                height="700"
+                src="assets/projects/Labor Force Participation.nb.html"
+              >
+              </iframe>
           </div>
 
-          <div class="col-lg-4 ">
-            <h3>Story-telling web app for city development</h3>
+          <div class="col-lg-4">
+            <h3>Women's Labor Force Analysis</h3>
             <ul>
-              <li><strong>Category</strong>: Data Visualization </li>
-              <li><strong>Client</strong>: Municipal Institute of Planning and Urban Management </li>
-              <li><strong>Tools</strong>: Python, DASH, QGIS</li>
-              <li><strong>Project URL</strong>: <a href="https://implangapp.herokuapp.com/apps/itesm">https://implangapp.herokuapp.com/apps/itesm</a></li>
+              <li><strong>Category</strong>: Machine Learning</li>
+              <li><strong>Tools</strong>: R, RStudio</li>
+              <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
             </ul>
 
             <p>
-              The Municipal Institute of Planning and Urban Management of my home city - San Pedro Garza García - was aiming to have a story-telling like web app that served the common user to know how the city has been transforming thoughout the years regarding population, floor usage and commerce. An extensive data analysis process was undertaken to get valuable insights.  
+              The following analysis was done to evaluate the data collected within the "Panel Study of Income Dynamics" regarding married woman in 1975. A descriptive analysis was created, as well as a multiple regression to observe the strength of certain variables when predicting wage. Lastly, a logistic regression was created to evaluate which indicators better explained a woman's propention to participate in the labor force. 
             </p>
-            <p>
-              <i>
-              * Personal requests included the usage of DASH framework & for it to be written in spanish. 
-              </i> 
-            </p>
+
           </div>
 
+          <br>
 
         </div>
-
       </div>
     </div><!-- End Portfolio Details -->
 
-
   </main><!-- End #main -->
-
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
