--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -43,36 +43,40 @@
     <div id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-      
-        <div class="col-lg-12 portfolio-info">
-          <h3>Clinker Free Lime Predictive Model</h3>
-          <ul>
-            <li><strong>Category</strong>: Machine Learning</li>
-            <li><strong>Enterprise</strong>: CEMEX </li>
-            <li><strong>Project date</strong>: 01 March, 2020</li>
-            <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
-          </ul>
+        <div class="row">
 
-          <p>
-            The following research aims to summerize the step-to-step process undertaken to develop a cement quality control predictive model. The following algorithms were tested and evaluated: Logistic Regression, Support Vector Machines and Random Forest Classifier. Sckit-Learn’s library was used to perform model development and hyperparameter selection. The best performing algorithm was the Random Forest Classifier, however, evaluation metrics suggested that the model's performance wasn't considered optimal for deployment and/or production usage. Descriptive analysis indicated poor quality data that limited a good performance. Suggestions and best practices were presented to the corresponding department in order to increase dataset size and quality. 
-          </p>
+          <div class="col-lg-8">
+            <!--<h2 class="portfolio-title">This is an example of portfolio detail</h2>-->
+              <iframe class="col-lg-12"
+                frameborder="0"
+                scrolling="yes"
+                width="640"
+                height="700"
+                src="assets/projects/Paper.pdf"
+              >
+              </iframe>
+          </div>
+
+          <br>
+
+          <div class="col-lg-4">
+            <h3>Clinker Free Lime Predictive Model</h3>
+            <ul>
+              <li><strong>Category</strong>: Machine Learning</li>
+              <li><strong>Enterprise</strong>: CEMEX </li>
+              <li><strong>Tools</strong>: Python, Sckit-Learn</li>
+              <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
+            </ul>
+
+            <p>
+              The following research aims to summerize the step-to-step process undertaken to develop a cement quality control predictive model. The following algorithms were tested and evaluated: Logistic Regression, Support Vector Machines and Random Forest Classifier. The best performing algorithm was the Random Forest Classifier, however, evaluation metrics suggested that the model's performance wasn't considered optimal for deployment and/or production usage. Descriptive analysis indicated poor quality data that limited a good performance. Suggestions and best practices were presented to the corresponding department in order to increase dataset size and quality. 
+            </p>
+
+          </div>
+
+          <br>
 
         </div>
-
-        <br>
-
-        <div class="col-lg-12">
-          <!--<h2 class="portfolio-title">This is an example of portfolio detail</h2>-->
-            <iframe class="col-lg-12"
-              frameborder="0"
-              scrolling="yes"
-              width="640"
-              height="700"
-              src="Paper.pdf"
-            >
-            </iframe>
-        </div>
-
       </div>
     </div><!-- End Portfolio Details -->
 
