--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
      
-      <h2>I'm a passionate <span>Data Analyst</span></h2>
+      <h2>I'm a passionate <span>Data Scientist</span> | <span>Machine Learning Engineer</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
