--- a/portfolio-details-1.html
+++ b/portfolio-details-1.html
@@ -76,7 +76,7 @@
             <h3>Story-telling web app for city development</h3>
             <ul>
               <li><strong>Category</strong>: Data Visualization </li>
-              <li><strong>Client</strong>: Municipal Institute of Planning and Urban Management </li>
+              <li><strong>User</strong>: Municipal Institute of Planning and Urban Management </li>
               <li><strong>Tools</strong>: Python, DASH, QGIS</li>
               <li><strong>Project URL</strong>: <a href="https://implangapp.herokuapp.com/apps/itesm">https://implangapp.herokuapp.com/apps/itesm</a></li>
             </ul>
