--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -43,27 +43,36 @@
     <div id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div class="row">
+          <div class="col-lg-12 ">
+            <h3>Dashboard creation for controlling department</h3>
+            <ul>
+              <li><strong>Category</strong>: Data Visualization </li>
+              <li><strong>Enterprise</strong>: Confidential: Manufacturer </li>
+              <li><strong>Tools</strong>: PowerBI, SQL</li>
+            </ul>
 
-          <div class="col-lg-8">
+            <p>
+              The controlling departemnt of a retail manufacturer was aiming to construct interactive dashboards that allowed them to correctly track objectives and performance. Their main tool for dashboard creation was Excel, and wanted to migrate to PowerBI. A set of data transformations, which were later encapsulated in stored procedures, needed to be performed in order to correctly feed the corresponding dashboards. 
+            </p>
+
+          </div>
+
+          <div class="col-lg-12">
             <!--<h2 class="portfolio-title">This is an example of portfolio detail</h2>-->
-            <br>
-            <br>
-            <br>
-            <br>
+
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/details1-1.png" alt="">
+                  <img src="assets/img/portfolio/details3-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/details1-2.png" alt="">
+                  <img src="assets/img/portfolio/details3-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/details1-3.png" alt="">
+                  <img src="assets/img/portfolio/details3-3.png" alt="">
                 </div>
 
               </div>
@@ -72,27 +81,6 @@
 
           </div>
 
-          <div class="col-lg-4 ">
-            <h3>Story-telling web app for city development</h3>
-            <ul>
-              <li><strong>Category</strong>: Data Visualization </li>
-              <li><strong>User</strong>: Municipal Institute of Planning and Urban Management </li>
-              <li><strong>Tools</strong>: Python, DASH, QGIS</li>
-              <li><strong>Project URL</strong>: <a href="https://implangapp.herokuapp.com/apps/itesm">https://implangapp.herokuapp.com/apps/itesm</a></li>
-            </ul>
-
-            <p>
-              The Municipal Institute of Planning and Urban Management of my home city - San Pedro Garza García - was aiming to have a story-telling like web app that served the common user to know how the city has been transforming thoughout the years regarding population, floor usage and commerce. An extensive data analysis process was undertaken to get valuable insights.  
-            </p>
-            <p>
-              <i>
-              * Personal requests included the usage of DASH framework & for it to be written in spanish. 
-              </i> 
-            </p>
-          </div>
-
-
-        </div>
 
       </div>
     </div><!-- End Portfolio Details -->
