--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <div class="resume-item">
             <h4>Bachelor of Business Informatics Engineer</h4>
             <h5>2016 - 2021</h5>
-            <p><em>Tecnologico de Monterrey, Mexico</em></p>
+            <p><em>Tecnológico de Monterrey, México</em></p>
             <p>Graduated with honorable mention of excellence, best average grade of the generation and extracurricular student development recognition. </p>
           </div>
           <div class="resume-item">
@@ -287,7 +287,7 @@
           <h3 class="resume-title">Extra Academic Formation</h3>
           <div class="resume-item">
             <h4>Association of Computer Machinary (ACM)</h4>
-            <h5>2016 - 20018</h5>
+            <h5>2016 - 2018</h5>
             <p><em>Vice-President & Treasury Board</em></p>
             <p>
             <ul>
@@ -436,7 +436,7 @@
               <h4>Cement Predictive Model</h4>
               <p>Machine Learning</p>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details-0.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -463,6 +463,19 @@
               <p>Machine Learning</p>
               <div class="portfolio-links">
                 <a href="portfolio-details-2.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-dv">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Controlling Dashboard for Manufacturer</h4>
+              <p>Data Visualization</p>
+              <div class="portfolio-links">
+                <a href="portfolio-details-3.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
