--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
      
-      <h2>I am a passionate <span>Data Scientist</span> | <span>Data Analyst</span></h2>
+      <h2>I am a passionate <span>Data & Backend Specialist</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -84,14 +84,14 @@
           <img src="assets/img/me.png" class="img-fluid"  alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Data Scientist &amp; Data Analyst</h3>
+          <h3>Data &amp; Backend Specialist</h3>
           <p class="fst-italic">
             
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Bachelor's Degree:</strong> <span>Business Informatics</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degrees:</strong> <span>Business Informatics, M.S. </span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Mail:</strong> <span>rangelorb97@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <a href="https://linkedin.com/in/brendaorb97/">@rangelorb97</a></li>
               </ul>
@@ -105,7 +105,7 @@
             </div>
           </div>
           <p>
-            Skilled and committed business informatics specialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models. Passionate for data science, advanced analytics & statistics to solve the latest of business’ inquiries.
+            Skilled and committed data & backend specialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models; advanced analytics & statistics; development of backend solutions for applications and processes. Passionate for data science and software development to solve and comply with the latest of business’ inquiries and desires. 
           </p>
         </div>
       </div>
@@ -288,6 +288,12 @@
             <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
           </div>-->
           <div class="resume-item">
+            <h4>Master in Finance</h4>
+            <h5>2022 - Present</h5>
+            <p><em>Tecnológico de Monterrey, México</em></p>
+            <p>Concentration in the fields of Data Science and Fintech.</p>
+          </div>
+          <div class="resume-item">
             <h4>Bachelor of Business Informatics Engineer</h4>
             <h5>2016 - 2021</h5>
             <p><em>Tecnológico de Monterrey, México</em></p>
@@ -327,15 +333,14 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Data Scientist</h4>
+            <h4>Data & Backend - Co-Founder</h4>
             <h5>08/2021 - Present</h5>
-            <p><em>Principal Financial Group </em></p>
+            <p><em>Nuxio Software Solutions </em></p>
             <p>
             <ul>
-              <li>Developed machine learning models for marketing and retention efforts within the personal savings & investment fund services. </li>
-              <li>Resolved business inquiries from different departments through advanced analytics and statistical proof. </li>
-              <li>Created interactive dashboards to properly display models' results to application users.</li>
-              <li>Reduced dashboard updating process for predictive models in the development stage by 70%.</li>
+              <li>Compiled and analyzed data, processes, and codes to troubleshoot problems and identify areas of opportunity within developments.  </li>
+              <li>Development of product & feature ideas based on constant industry trend monitoring.  </li>
+              <li>Follow up with clientes and taking lead on project management, as needed. </li>
             </ul>
             </p>
           </div>
