change job titles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
      
-      <h2>I am a passionate <span>Data & Backend Specialist</span></h2>
+      <h2>I am a passionate <span>Data Scientist</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -333,7 +333,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Data & Backend - Co-Founder</h4>
+            <h4>IT Business Developer | Data Specialist</h4>
             <h5>08/2021 - Present</h5>
             <p><em>Nuxio Software Solutions </em></p>
             <p>
