--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
           </div>
           <p>
-            Skilled and committed data & backend specialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models; advanced analytics & statistics; development of backend solutions for applications and processes. Passionate for data science and software development to solve and comply with the latest of business’ inquiries and desires. 
+            Skilled and committed dataspecialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models; advanced analytics & statistics; development of data arquitecture and business intelligenge processes. Passionate for data science and software development to solve and comply with the latest of business’ inquiries and desires. 
           </p>
         </div>
       </div>
@@ -341,6 +341,19 @@
               <li>Compiled and analyzed data, processes, and codes to troubleshoot problems and identify areas of opportunity within developments.  </li>
               <li>Development of product & feature ideas based on constant industry trend monitoring.  </li>
               <li>Follow up with clientes and taking lead on project management, as needed. </li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Data Scientist</h4>
+            <h5>07/2021 - 07/2022</h5>
+            <p><em>Principal Financial Group </em></p>
+            <p>
+            <ul>
+              <li>Developed machine learning models for marketing and retention efforts within the afore & investment funds services.  </li>
+              <li>Resolved business inquiries from different departments through advanced analytics and statistical proof.  </li>
+              <li>Creation of interactive dashboards to properly display models’ results to application users. </li>
+              <li>Reduced dashboard updating process for predictive models in the development stage by 70%.</li>
             </ul>
             </p>
           </div>
