--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
      
-      <h2>I am a passionate <span>Data Scientist</span></h2>
+      <h2>I am a passionate <span>Data Scientist | Engineer</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -84,7 +84,7 @@
           <img src="assets/img/me.png" class="img-fluid"  alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Data &amp; Backend Specialist</h3>
+          <h3>Data Scientist | Engineer </h3>
           <p class="fst-italic">
             
           </p>
@@ -93,7 +93,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degrees:</strong> <span>Business Informatics, M.S. </span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Mail:</strong> <span>rangelorb97@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <a href="https://linkedin.com/in/brendaorb97/">@rangelorb97</a></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <a href="https://linkedin.com/in/brendaorangelb/">@brendaorangelb</a></li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -105,7 +105,7 @@
             </div>
           </div>
           <p>
-            Skilled and committed dataspecialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models; advanced analytics & statistics; development of data arquitecture and business intelligenge processes. Passionate for data science and software development to solve and comply with the latest of business’ inquiries and desires. 
+            Skilled and committed data specialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models; advanced analytics & statistics; development of data arquitecture and business intelligenge processes. Passionate for data science and software development to solve and comply with the latest of business’ inquiries and needs. 
           </p>
         </div>
       </div>
@@ -291,7 +291,7 @@
             <h4>Master in Finance</h4>
             <h5>2022 - Present</h5>
             <p><em>Tecnológico de Monterrey, México</em></p>
-            <p>Concentration in the fields of Data Science and Fintech.</p>
+            <p>Concentration in the fields of Data Science and Statistics.</p>
           </div>
           <div class="resume-item">
             <h4>Bachelor of Business Informatics Engineer</h4>
