--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-ml">Machine Learning</li>
             <li data-filter=".filter-dv">Data Visualization</li>
+            <li data-filter=".filter-da">Data Analytics</li>
           </ul>
         </div>
       </div>
@@ -520,6 +521,19 @@
               <p>Data Visualization</p>
               <div class="portfolio-links">
                 <a href="portfolio-details-3.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-md-6 portfolio-item filter-da">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Brazil Investment Market Research</h4>
+              <p>Data Analytics</p>
+              <div class="portfolio-links">
+                <a href="portfolio-details-4.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
