--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
           </div>
           <p>
-            Skilled and committed data specialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models; advanced analytics & statistics; development of data arquitecture and business intelligenge processes. Passionate for data science and software development to solve and comply with the latest of business’ inquiries and needs. 
+            Skilled and committed data specialist with record of academic and professional success within the IT and business sectors. Extensive applied experience in the development of explicative, predictive and prescriptive machine learning models; advanced analytics & statistics; development of data arquitecture and business intelligence processes. Passionate for data science and software development to solve and comply with the latest of business’ inquiries and needs. 
           </p>
         </div>
       </div>
