--- a/portfolio-details-1.html
+++ b/portfolio-details-1.html
@@ -78,7 +78,7 @@
               <li><strong>Category</strong>: Data Visualization </li>
               <li><strong>User</strong>: Municipal Institute of Planning and Urban Management </li>
               <li><strong>Tools</strong>: Python, DASH, QGIS</li>
-              <li><strong>Project URL</strong>: <a href="https://implangapp.herokuapp.com/apps/itesm">https://implangapp.herokuapp.com/apps/itesm</a></li>
+              <!--<li><strong>Project URL</strong>: <a href="https://implangapp.herokuapp.com/apps/itesm">https://implangapp.herokuapp.com/apps/itesm</a></li>-->
             </ul>
 
             <p>
@@ -86,7 +86,8 @@
             </p>
             <p>
               <i>
-              * Personal requests included the usage of DASH framework & for it to be written in spanish. 
+              * Personal requests included the usage of DASH framework & for it to be written in spanish.
+              * Private web app 
               </i> 
             </p>
           </div>
