--- a/index.html
+++ b/index.html
@@ -539,6 +539,19 @@
           </div>
         </div>
 
+        <div class="col-lg-6 col-md-6 portfolio-item filter-da">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Tech Impact in Commercial Banking</h4>
+              <p>Data Analytics</p>
+              <div class="portfolio-links">
+                <a href="portfolio-details-5.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
 
     </div>
