--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
           <img src="assets/img/me.png" class="img-fluid"  alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Data Scientist | Engineer </h3>
+          <h3>Data Scientist | IT Business Developer </h3>
           <p class="fst-italic">
             
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degrees:</strong> <span>Business Informatics, M.S. </span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degrees:</strong> <span>Business Informatics, MiF </span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Mail:</strong> <span>rangelorb97@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <a href="https://linkedin.com/in/brendaorangelb/">@brendaorangelb</a></li>
               </ul>
@@ -289,7 +289,7 @@
           </div>-->
           <div class="resume-item">
             <h4>Master in Finance</h4>
-            <h5>2022 - Present</h5>
+            <h5>2022 - 2024</h5>
             <p><em>Tecnológico de Monterrey, México</em></p>
             <p>Concentration in the fields of Data Science and Statistics.</p>
           </div>
