--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
      
-      <h2>I am a passionate <span>Data Scientist | Engineer</span></h2>
+      <h2>I am a passionate <span>Data Scientist | IT Business Developer</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
