--- a/index.html
+++ b/index.html
@@ -334,12 +334,12 @@
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>IT Business Developer | Data Specialist</h4>
-            <h5>08/2021 - Present</h5>
+            <h5>08/2022 - Present</h5>
             <p><em>Nuxio Software Solutions </em></p>
             <p>
             <ul>
-              <li>Compiled and analyzed data, processes, and codes to troubleshoot problems and identify areas of opportunity within developments.  </li>
-              <li>Development of product & feature ideas based on constant industry trend monitoring.  </li>
+              <li>Compiled and analyzed data and processes to troubleshoot problems and identify areas of opportunity within developments.  </li>
+              <li>Development of product & features ideas based on constant industry trend monitoring and requirement analysis.</li>
               <li>Follow up with clientes and taking lead on project management, as needed. </li>
             </ul>
             </p>
